--- a/styles/style.css
+++ b/styles/style.css
@@ -10,7 +10,7 @@ background: white;
     min-width: 220px;
     max-height: 600ex;
     min-height: 550px;
-    background: white;
+    background: rgb(223, 223, 223);
 }
 
 .header>img{
@@ -93,5 +93,4 @@ margin-left: 90px;
     max-height: 50px;
     max-width: 50px;
     margin-left: 270px;
-    margin-bottom: 80px;
 }
