--- a/styles/style.css
+++ b/styles/style.css
@@ -72,25 +72,21 @@ margin-left: 11px;
     max-width: 250px;
     margin-left: 70px;
 }
-.button1>img {
-width: 100%;
-height: 100%;
-max-height: 50px;
-max-width: 50px;
-margin-left: 90px;
-}
-.button2>img {
-    width: 100%;
-    height: 100%;
-    max-height: 50px;
-    max-width: 50px;
-    margin-left: 180px;
+
+.footer{
+    margin: auto;
+    margin-left: 50px;
 }
 
-.button3>img {
+.button>img {
     width: 100%;
     height: 100%;
     max-height: 50px;
     max-width: 50px;
-    margin-left: 270px;
+
+}
+.button {
+    width: 20%;
+    margin-left: 30px;  
+display: inline-block;
 }
